fix: some issue

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="apple-mobile-web-app-title" content="Loop" />
     <link rel="apple-touch-icon" href="/icon/favicon-crop.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>LOOP!</title>
+    <title>Loop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
